feature: update flink-1.15 examples.