@@ -13,11 +13,14 @@ import java.nio.file.Paths;
 import java.util.Arrays;
 import java.util.Collections;
 
+/**
+ * add --add-opens java.base/java.lang=ALL-UNNAMED vm options
+ */
 public class YarnPerJobExample {
 
     public static void main(String[] args) throws Exception {
         CliClient client = Util.buildCliClient();
-        final java.nio.file.Path flinkHome = Paths.get("/Users/wangqi/Documents/software/flink/flink-1.13.6");
+        final java.nio.file.Path flinkHome = Paths.get("/Users/wangqi/Documents/software/flink/flink-1.15.1");
         client.submit(DeploymentTarget.YARN_PER_JOB, flinkHome, buildConfiguration(), Util.buildJarJob());
     }
 
@@ -26,13 +29,12 @@ public class YarnPerJobExample {
      */
     private static Configuration buildConfiguration() throws MalformedURLException {
         Configuration configuration = FlinkExamples.loadConfiguration();
-        configuration.setString(ConfigConstants.PATH_HADOOP_CONFIG, "/var/folders/q4/lbzr8_ds6cl7ml690ldq00zc0000gn/T/8929050144804066824/local_docker_kubernetes");
         configuration.setLong(JobManagerOptions.TOTAL_PROCESS_MEMORY.key(), MemorySize.ofMebiBytes(4096).getBytes());
         configuration.setLong(TaskManagerOptions.TOTAL_PROCESS_MEMORY.key(), MemorySize.ofMebiBytes(4096).getBytes());
         configuration.setInteger(TaskManagerOptions.NUM_TASK_SLOTS, 2);
 
-        configuration.set(YarnConfigOptions.PROVIDED_LIB_DIRS, Arrays.asList(new String[]{"hdfs://namenode:9002/flink/1.13.6"}));
-        configuration.set(YarnConfigOptions.FLINK_DIST_JAR, "hdfs://namenode:9002/flink/1.13.6/flink-dist_2.11-1.13.6.jar");
+        configuration.set(YarnConfigOptions.PROVIDED_LIB_DIRS, Arrays.asList(new String[]{"hdfs://hadoop:9000/flink/1.15.1"}));
+        configuration.set(YarnConfigOptions.FLINK_DIST_JAR, "hdfs://hadoop:9000/flink/1.15.1/flink-dist-1.15.1.jar");
 
         URL exampleUrl = new File(FlinkExamples.EXAMPLE_JAR).toURL();
         ConfigUtils.encodeCollectionToConfig(configuration, PipelineOptions.JARS, Collections.singletonList(exampleUrl), Object::toString);
